--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "element-ui": "^2.12.0",
+    "element-ui": "^2.4.6",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-i18n": "^8.0.0",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
